--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:supportsRtl="true">
 
         <activity android:name=".PackageInstallerActivity"
+                android:launchMode="singleTask"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:excludeFromRecents="true">
             <intent-filter>
